5924
With r24854, the crash is gone: 

{code}
bt4.scala:6: error: erroneous or inaccessible type
  def statusByAlarms(alarms: GenTraversableOnce[FooAlarm]) = println("hello")
                             ^
one error found
{code}

